2006-03-03  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/AbstractListModel.java:
	(AbstractListModel): Added API docs,
	(fireContentsChanged): Minor API doc correction,
	(fireIntervalAdded): Likewise,
	(fireIntervalRemoved): Likewise.

2006-03-03  Roman Kennke  <kennke@aicas.com>

	* NEWS: Added paragraph about Swing improvements.

2006-03-03  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/AbstractAction.java: Updated API docs all over,
	* javax/swing/AbstractCellRenderer.java: Minor reformatting, plus
	(stopCellEditing): Minor API doc correction,
	* javax/swing/UnsupportedLookAndFeelException.java
	(UnsupportedLookAndFeelException): Changed argument name, updated API
	docs.

2006-03-03  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalUtils.java
	(fillMetalPattern): Added switch to not use Graphics2D methods,
	even if they are available.

2006-03-03  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicHTML.java
	(isHTMLString): Check for string beeing null.
	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(BasicInternalFrameListener.internalFrameActivated): Implemented.
	(BasicInternalFrameListener.internalFrameDeactivated): Implemented.
	(InternalFrameLayout): Don't touch the glass pane here.
	(installUI): Fix handling of glass pane.
	* javax/swing/plaf/basic/BasicLabelUI.java
	(vr): New field.
	(ir): New field.
	(tr): New field.
	(BasicLabelUI): Initialize new fields.
	(getPreferredSize): Avoid creating new Rectangles by using
	SwingUtilities method.
	(paint): Avoid creating new Rectangles by reusing
	new fields. Added some preliminary handling of HTML inside the
	label.
	(installComponents): Handle HTML by calling BasicHTML.updateRenderer.
	(uninstallComponents): Clear HTML renderer.
	(propertyChange): Check for HTML text and install renderer if
	appropriate.
	* javax/swing/plaf/basic/BasicListUI.java
	(getCellBounds): Avoid creating new Rectangle by using SwingUtilities
	method.